# mlops_project

./: .gitignore  .gitlab-ci.yml  README.md  bentofile.yaml  metrics.csv  models.dvc  pyproject.toml  requirements.txt  test_lib.ipynb
.dvc/: config
application/src/: bentofile.yaml  create_service.py  dockerfile  service.py  streamlit_app.py
application/src/config/: main.yaml
application/src/outputs/2023-06-26/17-36-35/.hydra/: hydra.yaml
application/src/outputs/2023-06-26/17-37-57/.hydra/: config.yaml  hydra.yaml
config/: main.yaml
models/: employee_churn_clf  xgboost
outputs/2023-06-28/23-10-38/: params.yml
outputs/2023-06-28/23-10-38/.hydra/: config.yaml  hydra.yaml
training/src/: evaluate_model.py  metrics.csv  process.py  train_model.py
training/src/mlruns/0/: meta.yaml
training/src/outputs/2023-06-26/13-45-38/.hydra/: hydra.yaml
training/src/outputs/2023-06-26/13-46-03/.hydra/: hydra.yaml
training/src/outputs/2023-06-26/13-46-59/.hydra/: config.yaml  hydra.yaml
training/src/outputs/2023-06-26/14-13-41/.hydra/: hydra.yaml
training/src/outputs/2023-06-26/14-19-18/.hydra/: config.yaml  hydra.yaml
training/src/outputs/2023-06-26/14-33-00/: params.yml
training/src/outputs/2023-06-26/14-33-00/.hydra/: hydra.yaml
training/src/outputs/2023-06-26/14-40-09/: params.yml
training/src/outputs/2023-06-26/14-40-09/.hydra/: hydra.yaml
training/src/outputs/2023-06-27/09-54-48/.hydra/: hydra.yaml
training/src/outputs/2023-06-27/10-05-42/.hydra/: config.yaml  hydra.yaml
training/test/: Untitled.ipynb  test_process.py
