[tool.poetry]
name = "dagshub-project"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "dagshub_project"}]

[tool.poetry.dependencies]
python = "==3.10.10"
kaleido = "0.2.1"
mlflow = "^2.4.1"
pre-commit = "^3.3.3"
dagshub = "^0.2.18.post1"
jupyter = "^1.0.0"
shap = "^0.41.0"
fastapi = "^0.97.0"
uvicorn = "^0.22.0"
pydantic = "^1.10.9"
gradio = "^3.35.2"
altair = "^5.0.1"
vega-datasets = "^0.9.0"
bentoml = "^1.0.22"
scikit-learn = "^1.2.2"
evidently = "^0.3.3"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
patsy = "^0.5.3"
hyperopt = "^0.2.7"
xgboost = "^1.7.6"
pandera = "0.10.1"
pytest-steps = "^1.8.0"
deepchecks = "^0.17.3"
pytest = "^7.4.0"
path = "^16.6.0"
dvc = "^3.2.2"
streamlit = "^1.23.1"
pandas = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
